Add login swagger documentation
(cherry picked from commit edae9b64234d28e1ae0951b49d4ef81d9b70c0a3)
