# internal/api/handler/auth_handler.go
@@ -36,6 +36,18 @@ func SignUpHandler(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"result": "account created successfully"})
 }
 
+// LoginHandler godoc
+//
+//	@Summary		User Login
+//	@Description	Logs the user in and returns a jwt token
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			loginDetails	body		model.UserLogin	true	"User login details"
+//	@Success		200				{string}	string			"Login successful!"
+//	@Failure		400				{string}	string			"Validation error"
+//	@Failure		500				{string}	string			"Internal server error"
+//	@Router			/auth/login [post]
 func LoginHandler(c *gin.Context) {
 	var loginDetails model.UserLogin
 
